Difference Boolean Modifier does not work in most simple cases with Array Modifier #52329

Closed
opened 2017-08-10 09:58:26 +02:00 by John Thomas · 11 comments

System Information
Win7-x64
nVidia GeForce - 1060

Blender Version
Broken: 2.79.RC (Hash: 5e9132b)

Short description of error
The Difference Boolean Modifier does not correctly 'cut' the main object when the second object (the one which will cut the main one) is an array of objects.

Exact steps for others to reproduce the error

With an empty scene do:

  1. Add a cube, scale it to x,y,z = 5,5,0.3 in order to make a plaque. Let's name it "Cube"
  2. Add a cube, scale it to x,y,z= 0.5,0.5,1 in order to make a small pillar. Let's name it "Cube 001"
  3. On "Cube 001" add an Array modifier with Count: 8 and Relative Offset x,y,z=1.2,0,0.
  4. On "Cube 001" add another Array modifier with Count: 7 and Relative Offset x,y,z=0,1.4,0. Our target is to have a square of pillars with some spaces between them.
  5. Place this array in order to intersect the plaque created at step 1. (see the attached file for an example)
  6. On "Cube" (our plaque) add a Boolean Modifier, choose Difference (Bmesh) and select the "Cube 001" as the other boolean operator.
  7. Press "Apply" on the modifier added at step 6
  8. Delete the "Cube 001"

Expected: "Cube" should appear as a normal grid of square holes.

Actual: "Cube" has some holes filled up and some holes filled only by half by some faces left by. The result varies upon on relative placement between the array and the plaque and upon of other factors (distance between the pillars, number of them etc.). Rotate, zoom, pan and look in each hole to see. I attached also a JPG here Blender-bug-diff-array.JPG to show the phenomenon.

Just execute the steps 7 and 8 on the attached blend file and examine it.

Array-Difference-Bug.blend
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Array-Difference-Bug_ubertest.blend edited: A more comprehensive example for reference (animated at multiple scales) ~ ideasman42

**System Information** Win7-x64 nVidia GeForce - 1060 **Blender Version** Broken: 2.79.RC (Hash: 5e9132b) **Short description of error** The Difference Boolean Modifier does not correctly 'cut' the main object when the second object (the one which will cut the main one) is an array of objects. **Exact steps for others to reproduce the error** With an empty scene do: 1. Add a cube, scale it to x,y,z = 5,5,0.3 in order to make a plaque. Let's name it "Cube" 2. Add a cube, scale it to x,y,z= 0.5,0.5,1 in order to make a small pillar. Let's name it "Cube 001" 3. On "Cube 001" add an Array modifier with Count: 8 and Relative Offset x,y,z=1.2,0,0. 4. On "Cube 001" add another Array modifier with Count: 7 and Relative Offset x,y,z=0,1.4,0. Our target is to have a square of pillars with some spaces between them. 5. Place this array in order to intersect the plaque created at step 1. (see the attached file for an example) 6. On "Cube" (our plaque) add a Boolean Modifier, choose Difference (Bmesh) and select the "Cube 001" as the other boolean operator. 7. Press "Apply" on the modifier added at step 6 8. Delete the "Cube 001" Expected: "Cube" should appear as a normal grid of square holes. Actual: "Cube" has some holes filled up and some holes filled only by half by some faces left by. The result varies upon on relative placement between the array and the plaque and upon of other factors (distance between the pillars, number of them etc.). Rotate, zoom, pan and look in each hole to see. I attached also a JPG here ![Blender-bug-diff-array.JPG](https://archive.blender.org/developer/F703393/Blender-bug-diff-array.JPG) to show the phenomenon. Just execute the steps 7 and 8 on the attached blend file and examine it. [Array-Difference-Bug.blend](https://archive.blender.org/developer/F703381/Array-Difference-Bug.blend) Based on a (as simple as possible) attached .blend file with minimum amount of steps [Array-Difference-Bug_ubertest.blend](https://archive.blender.org/developer/F707916/Array-Difference-Bug_ubertest.blend) edited: A more comprehensive example for reference (animated at multiple scales) ~ ideasman42
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @m.Th

Added subscriber: @m.Th

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey
Campbell Barton was assigned by Sergey Sharybin 2017-08-10 10:06:05 +02:00

@ideasman42, this is one of the cases when BMesh boolean is failing. Mind having a look? :)

@ideasman42, this is one of the cases when BMesh boolean is failing. Mind having a look? :)

This issue was referenced by a4bcdf5fb1

This issue was referenced by a4bcdf5fb1a7afc85b464c35b359e627907db2e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author

Thanks a lot! Somethingis indeed improved. However the bug is still present in 2.79 - 66c1b23 (Date: 2017-08-14 23:22)

The original attached blend file works ok now.

...but the newly attached one does not. (I moved a little the plaque). Take a closer look at "holes". Some of them are half-filed with residue faces.

Array-Difference-Bug-2.blend

Thanks a lot! *Something*is indeed improved. However the bug is still present in 2.79 - 66c1b23 (Date: 2017-08-14 23:22) The original attached blend file works ok now. ...but the newly attached one does not. (I moved a little the plaque). Take a closer look at "holes". Some of them are half-filed with residue faces. [Array-Difference-Bug-2.blend](https://archive.blender.org/developer/F712982/Array-Difference-Bug-2.blend)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@m.Th I didn't see you re-opened this report - and now its too late, 2.79 is already released.

Can you open a new report since the original one is fixed (including a test at multiple scales and animated rotations).

@m.Th I didn't see you re-opened this report - and now its too late, 2.79 is already released. Can you open a new report since the original one is fixed *(including a test at multiple scales and animated rotations).*

@m.Th - this is in fact not an error in booleans, its an error in face-filling.

Good find, we didn't have reports in this part of the code in years :)

@m.Th - this is in fact not an error in booleans, its an error in face-filling. Good find, we didn't have reports in this part of the code in years :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52329
No description provided.